--- a/TowerDestroyGame/Assets/Styles/style1.uss
+++ b/TowerDestroyGame/Assets/Styles/style1.uss
@@ -26,18 +26,21 @@
 .button {
     background-image: url('project://database/Assets/Sprites/1x/Icons/resume_icon.png?fileID=21300000&guid=cb6e48794c2ef104ca1956d3515821ac&type=3#resume_icon');
     -unity-background-scale-mode: scale-to-fit;
-    height: 80px;
-    width: 348px;
+    height: auto;
+    width: auto;
     background-color: rgba(255, 255, 255, 0);
     border-left-color: rgba(255, 255, 255, 0);
     border-right-color: rgba(255, 255, 255, 0);
     border-top-color: rgba(255, 255, 255, 0);
     border-bottom-color: rgba(255, 255, 255, 0);
-    top: 0;
-    margin-left: 12px;
-    margin-right: 12px;
-    margin-top: 12px;
-    margin-bottom: 12px;
+    top: auto;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    align-items: center;
+    flex-direction: column;
+    opacity: 1;
 }
 
 .progressBar .unity-progress-bar__background {
@@ -58,9 +61,43 @@
 
 .unity-progress-bar__progress {
     background-color: rgba(255, 255, 255, 0);
-    -unity-background-image-tint-color: rgba(54, 195, 139, 255);
+    -unity-background-image-tint-color: rgb(54, 195, 129);
     -unity-background-scale-mode: stretch-to-fill;
     background-image: url('project://database/Assets/Sprites/1x/Icons/health_bar_icon.png?fileID=21300000&guid=d33f3037a8854bc4bb1d75284b007f94&type=3#health_bar_icon');
     flex-grow: 0;
-    left: -3px;
+    left: 50px;
+    flex-shrink: 1;
+    width: auto;
+    height: auto;
+    top: 0;
+    bottom: 0;
+    margin-left: 0;
+    color: rgba(255, 255, 255, 0);
+    border-left-color: rgba(255, 255, 255, 0);
+    border-right-color: rgba(255, 255, 255, 0);
+    border-top-color: rgba(255, 255, 255, 0);
+    border-bottom-color: rgba(255, 255, 255, 0);
+    opacity: 1;
+    margin-right: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    justify-content: center;
+    align-items: stretch;
+    flex-direction: row;
+}
+
+.topUI {
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-top: 0;
+    margin-bottom: 0;
+    top: 0;
+}
+
+.topMarginBottom {
+    margin-top: 500px;
+    margin-bottom: 0;
+    -unity-text-outline-color: rgba(255, 255, 255, 0);
+    color: rgba(255, 255, 255, 0);
+    background-color: rgba(255, 255, 255, 0);
 }
